# Mathematical-Reasoning-RL-Scaling-Law

./: .gitignore  .gitmodules  README.md  config.py  data_proc.py  example_batch_config.json  extract_csv.py  fit.py  fit_models.py  fit_models_simple.py  fit_utils.py  intrinsic.py  note.txt  plot.py  plot_data.py  plot_intrinsic.py  pyproject.toml  requirements.txt  run.py  run_batch_example.py  run_fit_intrinsic.py  run_hejia.py  run_plot_fit.py  run_plot_fit_simple_curve_fit.py  run_plot_multi-subplot.py  run_plot_multi-subplot_oodid.py  run_plot_multi.py  run_plot_multi_fit.py  run_plot_multi_fit_simple_curve_fit.py  run_plot_multi_fit_simple_curve_fit_fixE-noclosesourcemodels.py  run_plot_multi_fit_simple_curve_fit_fixE.py  run_plot_multi_fit_simple_curve_fit_fixE_b_or_i.py  run_plot_multi_fit_simple_curve_fit_fixN.py  run_plot_multi_fit_simple_curve_fit_fixN_b_or_i.py  run_plot_simple.py  run_plot_single.py  run_plot_single_slicefactor.py  run_xhyu.py  run_xhyu_dual-logistic_BinitTry.py  run_xhyu_dual-logistic_checkpoint.py  (+12 more)
SandboxFusion/: Makefile
analysis/: README.md
configs/: ppo_1.5b.yaml  ppo_1.5b_minimal.yaml
dev/: test.py
params/: batch_plot.json  datareuse_tau_fit.json  datareuse_tau_smooth.json  example_batch_config.json  exp1_fit.json  exp1_smooth.json  exp2_fit_loglinear.json  exp2_k_e0.json  exp2_smooth.json  grpo.json  response_length_E.json  response_length_k_e0.json  response_length_testloss.json  test_NC_smooth.json  test_config.json
sandbox_deployment/: DEPLOYMENT_GUIDE.md  requirements_server.txt  setup_and_start_sandbox.sh  (+2 more)
(+235 files in other folders)
